# euromilhoes

./: .gitignore  Makefile  README.md  pyproject.toml
data/: euromilhoes-wins.eu.csv  euromilhoes.eu.csv  euromilhoes.pt.csv
docs/: assignment.md  part-1-solution.md
setup/: extract-raw-data.py  extract_raw_data.py  parse-and-store-data.py  scrap.py
src/app/: __main__.py  analyse_data.py  config.py  load_data.py  loader.py
src/app/plots/: draws.py  monthly.py  timeline.py  timeline_acf.py  timeline_moving_avgs.py  timeline_unusual.py  trimesters.py
tests/scripts/: show-plot.bash  show-plots.bash
